[gd_scene load_steps=4 format=3 uid="uid://bay3xbbx2terx"]

[ext_resource type="Texture2D" uid="uid://ds5ptimcx3yi5" path="res://assets/menu/image (1).png" id="1_ahcmw"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_wcc7w"]
[ext_resource type="FontFile" uid="uid://bton4hjgt1vth" path="res://font/SVN-Comic Sans.ttf" id="2_gl5a0"]

[node name="Main menu" type="Node2D"]
script = ExtResource("1_wcc7w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(542, 334)
scale = Vector2(1.21858, 1.21858)
texture = ExtResource("1_ahcmw")

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="new_game" type="Button" parent="Button_manager"]
layout_mode = 0
offset_left = 768.0
offset_top = 277.0
offset_right = 955.0
offset_bottom = 356.0
theme_override_fonts/font = ExtResource("2_gl5a0")
theme_override_font_sizes/font_size = 50
text = "Chơi mới"

[node name="load_game" type="Button" parent="Button_manager"]
layout_mode = 0
offset_left = 768.0
offset_top = 160.0
offset_right = 955.0
offset_bottom = 239.0
theme_override_fonts/font = ExtResource("2_gl5a0")
theme_override_font_sizes/font_size = 50
text = "Chơi tiếp"

[node name="quit_game" type="Button" parent="Button_manager"]
layout_mode = 0
offset_left = 770.0
offset_top = 394.0
offset_right = 957.0
offset_bottom = 473.0
theme_override_fonts/font = ExtResource("2_gl5a0")
theme_override_font_sizes/font_size = 50
text = "Thoát"

[connection signal="pressed" from="Button_manager/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Button_manager/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Button_manager/quit_game" to="." method="_on_quit_game_pressed"]
